2010-01-29  Ben Abbott  <bpabbott@mac.com>

	* plot/axis.m, plot/__go_draw_axes__.m, plot/colorbar.m,
	plot/isocolors.m, plot/isonormals.m, plot/isosurface.m,
	plot/plotyy.m, plot/polar.m, plot/surfl.m, 
	plot/private/__actual_axis_position.m:
	Replace dataaspectratio and dataaspectratiomode properties with
	plotboxaspectratio and plotboxaspectratio properties.

2010-01-29  John W. Eaton  <jwe@octave.org>

	* polynomial/compan.m, polynomial/conv.m, polynomial/deconv.m,
	polynomial/mpoles.m, polynomial/polyderiv.m,
	polynomial/polygcd.m, polynomial/polyout.m,
	polynomial/polyreduce.m, polynomial/polyval.m,
	polynomial/polyvalm.m, polynomial/residue.m:
	Point to polyint in @seealso, not polyinteg.

	* deprecated/module.mk (deprecated_FCN_FILES):
	Remove delete files from the list.

	* deprecated/beta_cdf.m, deprecated/beta_inv.m,
	deprecated/beta_pdf.m, deprecated/beta_rnd.m,
	deprecated/binomial_cdf.m, deprecated/binomial_inv.m,
	deprecated/binomial_pdf.m, deprecated/binomial_rnd.m,
	deprecated/chisquare_cdf.m, deprecated/chisquare_inv.m,
	deprecated/chisquare_pdf.m, deprecated/chisquare_rnd.m,
	deprecated/clearplot.m, deprecated/com2str.m,
	deprecated/exponential_cdf.m, deprecated/exponential_inv.m,
	deprecated/exponential_pdf.m, deprecated/exponential_rnd.m,
	deprecated/f_cdf.m, deprecated/f_inv.m, deprecated/f_pdf.m,
	deprecated/f_rnd.m, deprecated/gamma_cdf.m,
	deprecated/gamma_inv.m, deprecated/gamma_pdf.m,
	deprecated/gamma_rnd.m, deprecated/geometric_cdf.m,
	deprecated/geometric_inv.m, deprecated/geometric_pdf.m,
	deprecated/geometric_rnd.m, deprecated/hypergeometric_cdf.m,
	deprecated/hypergeometric_inv.m,
	deprecated/hypergeometric_pdf.m,
	deprecated/hypergeometric_rnd.m, deprecated/intersection.m,
	deprecated/is_bool.m, deprecated/is_complex.m,
	deprecated/is_list.m, deprecated/is_matrix.m,
	deprecated/is_scalar.m, deprecated/is_square.m,
	deprecated/is_stream.m, deprecated/is_struct.m,
	deprecated/is_symmetric.m, deprecated/is_vector.m,